add h4's to most pages pass fewer things to template show trip lists for locations

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 
       {{monthgraph sightingsByMonth chartID}}
 
-      <div>{{sightings.length}} sightings</div>
+      <h4>{{sightings.length}} sightings</h4>
 
       <div class="biglist">
       {{#each sightings}}
@@ -85,6 +85,7 @@
     <script id="location-template" type="x-handlebars-template">
       <h3>{{name}} <span style='font-weight: lighter'>| <a href="#county/{{county}}">{{county}}</a>, {{state}}<span></h3>
       <div><a target="_blank" href="https://www.openstreetmap.org/?mlat={{latitude}}&mlon={{longitude}}#map=10/{{latitude}}/{{longitude}}">{{latitude}},{{longitude}}</a></div>
+
       <div>
       {{#each photos}}
         <span><a href="{{this.photoURL}}"><img src="{{this.thumbURL}}"></a></span>
@@ -95,7 +96,7 @@
 
       {{monthgraph sightingsByMonth chartID}}
 
-      <div>{{taxons.length}} species on {{dateObjects.length}} dates</div>
+      <h4>{{taxons.length}} species</h4>
 
       <div class="biglist">
       {{#each taxons}}
@@ -104,10 +105,20 @@
         </div>
       {{/each}}
       </div>
+
+      <h4>{{sightingList.dateObjects.length}} dates</h4>
+
+      <div class="biglist">
+      {{#each sightingList.dateObjects}}
+        <div>
+          <div><a href="#trip/{{ebirddate this}}">{{nicedate this}}</a> {{lookup ../customDayNames (ebirddate this)}}</div>
+        </div>
+      {{/each}}
+      </div>
     </script>
 
     <script id="county-template" type="x-handlebars-template">
-      <h3>{{county}} <span style='font-weight: lighter'>| {{state}}<span></h3>
+      <h3>{{name}} <span style='font-weight: lighter'>| {{state}}<span></h3>
 
       {{#each photos}}
         <span><a href="{{this.photoURL}}"><img src="{{this.thumbURL}}"></a></span>
@@ -118,7 +129,15 @@
 
       {{monthgraph sightingsByMonth chartID}}
 
-      <div>{{taxons.length}} species on {{dateObjects.length}} dates</div>
+      <h4>{{sightingList.locations.length}} locations</h4>
+
+      <div class="biglist">
+        {{#each sightingList.locations}}
+          <div><a href="#location/{{this}}">{{this}}</a></div>
+        {{/each}}
+      </div>
+
+      <h4>{{taxons.length}} species on {{sightingList.dateObjects.length}} dates</h4>
 
       <div class="biglist">
       {{#each taxons}}
@@ -172,14 +191,14 @@
       {{/each}}
       </div>
 
-      <div>
+      <h4>
         {{sightingList.rows.length}} sightings at
         {{#if sightingList.multipleLocations}}
           {{sightingList.locations.length}} locations
         {{else}}
           {{sightingList.locations}}
         {{/if}}
-      </div>
+      </h4>
 
       {{#each sightingList.rows}}
         <div>
