--- a/app/index.html
+++ b/app/index.html
@@ -32,12 +32,12 @@
         </header>
     </div>
 
+    <div id="loading">
+      <center>loading</center>
+    </div>
+
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="loading" class="card inner">
-        <center>loading</center>
-      </section>
-
       <section id="home" class="hidden card inner">
         <div id='home-results' class='inner'>
         </div>
