--- a/app/index.html
+++ b/app/index.html
@@ -108,6 +108,7 @@
   <script src="scripts/c3.min.js"></script>
   <script src="scripts/papaparse.min.js"></script>
   <script src="scripts/handlebars-v4.0.4.js"></script>
+  <script src="scripts/handlebars-templates.js"></script>
   <script src="scripts/sightinglist.js"></script>
   <script src="scripts/app.js"></script>
 </html>
