add compress step for combining JS files and uglifying them add some gulp steps and dependencies do not include compressed JS in JS to compress

--- a/app/index.html
+++ b/app/index.html
@@ -101,14 +101,7 @@
         <p class="copyright">Check out <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird">the source code on github</a>
       </footer>
     </div>
-  </body>
 
-  <script src="scripts/offline-manager.js"></script>
-  <script src="scripts/d3.v3.min.js" charset="utf-8"></script>
-  <script src="scripts/c3.min.js"></script>
-  <script src="scripts/papaparse.min.js"></script>
-  <script src="scripts/handlebars-v4.0.4.js"></script>
-  <script src="scripts/handlebars-templates.js"></script>
-  <script src="scripts/sightinglist.js"></script>
-  <script src="scripts/app.js"></script>
+    <script src="scripts/compressed.js"></script>
+  </body>
 </html>
