precompile and compress CSS

--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,7 @@
     <link rel="manifest" href="./w3c-manifest.json">
     <link rel="shortcut icon" href="./images/ebird-favicon.ico">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/stylesheet.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/c3.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/app.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/bundle.css">
   </head>
 
   <body>
