add index to photographs add source maps add better debugging for when renderTemplate can't find the right div

--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,11 @@
         </div>
       </section>
 
+      <section id="photos" class="hidden card inner">
+        <div id='photos-results' class='inner'>
+        </div>
+      </section>
+
       <section id="locations" class="hidden card inner">
         <div id='locations-results' class='inner'>
         </div>
