when reading up photos.json, add an ID slot based on index into gPhotos use that to create a photos detail page link to that page from all the places where we show thumbnails

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,11 @@
         </div>
       </section>
 
+      <section id="photo" class="hidden card inner">
+        <div id='photo-results' class='inner'>
+        </div>
+      </section>
+
       <section id="locations" class="hidden card inner">
         <div id='locations-results' class='inner'>
         </div>
