add photos to menu bar replace duplicate thumbnails loop with Handlebars partial

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
           <span id="project_title">ebird-mybird</span>
           <span id="project_tagline"> | A personal website for your eBird data</span>
           <div>
+            <a data-hash="photos" href="#photos">photos</a>
             <a data-hash="trips" href="#trips">trips</a>
             <a data-hash="locations" href="#locations">locations</a>
             <a data-hash="taxons" href="#taxons">species</a>
