add full-text search of common names

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,8 @@
             <a data-hash="taxons" href="#taxons">species</a>
             <a data-hash="home" href="#home">home</a>
             <a data-hash="chrono" href="#chrono">chrono</a>
+            <input id="searchtext" type="text" size="20" />
+            <button id="gosearch">search</button>
         </div>
         </header>
     </div>
@@ -99,6 +101,11 @@
 
       <section id="debug" class="hidden card inner">
         <div id='debug-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="searchresults" class="hidden card inner">
+        <div id='searchresults-results' class='inner'>
         </div>
       </section>
     </div>
