--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,11 @@
         </div>
       </section>
 
+      <section id="bigdays" class="hidden card inner">
+        <div id='bigdays-results' class='inner'>
+        </div>
+      </section>
+
       <section id="trips" class="hidden card inner">
         <div id='trips-results' class='inner'>
         </div>
