--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <div id="loading">
-      <center>loading</center>
+      loading
     </div>
 
     <!-- HEADER -->
@@ -27,10 +27,12 @@
           <div>
             <a data-hash="photos" href="#photos">photos</a>
             <a data-hash="trips" href="#trips">trips</a>
+            <a data-hash="bigdays" href="#bigdays">big days</a>
             <a data-hash="locations" href="#locations">locations</a>
             <a data-hash="taxons" href="#taxons">species</a>
             <a data-hash="home" href="#home">home</a>
             <a data-hash="chrono" href="#chrono">chrono</a>
+            <a data-hash="debug" href="#debug">debug</a>
             <input id="searchtext" type="text" size="20" />
             <button id="gosearch">search</button>
         </div>
