have an initial loading screen don't have a weird kludgy loading overlay that wasn't working anyway

--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,6 @@
   </head>
 
   <body>
-    <div id="loading">
-      loading
-    </div>
-
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -41,6 +37,11 @@
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
+      <section id="loading" class="hidden card inner">
+        <div id="loading-results" class="inner">
+        </div>
+      </section>
+
       <section id="home" class="hidden card inner">
         <div id='home-results' class='inner'>
         </div>
