add support for viewing individual sightings including generated JSON for photos.json

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,11 @@
         </div>
       </section>
 
+      <section id="sighting" class="hidden card inner">
+        <div id='sighting-results' class='inner'>
+        </div>
+      </section>
+
       <section id="locations" class="hidden card inner">
         <div id='locations-results' class='inner'>
         </div>
