make locations index hierarchical, fixes issue #36 move stuff from header to footer to save space

--- a/app/index.html
+++ b/app/index.html
@@ -18,8 +18,6 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <span id="project_title">ebird-mybird</span>
-          <span id="project_tagline"> | A personal website for your eBird data</span>
           <div>
             <a data-hash="photos" href="#photos">photos</a>
             <a data-hash="trips" href="#trips">trips</a>
@@ -126,8 +124,11 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Bootstrapped with <a target="_blank_" href="https://github.com/mozilla/oghliner/">oghliner</a>.</p>
-        <p class="copyright">Check out <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird">the source code on github</a>
+        <p class="copyright">
+          ebird-mybird |
+          Bootstrapped with <a target="_blank_" href="https://github.com/mozilla/oghliner/">oghliner</a> | 
+          Check out the <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird">source code on github</a>
+        </p>
       </footer>
     </div>
 
