--- a/app/index.html
+++ b/app/index.html
@@ -127,7 +127,8 @@
         <p class="copyright">
           ebird-mybird |
           Bootstrapped with <a target="_blank_" href="https://github.com/mozilla/oghliner/">oghliner</a> | 
-          Check out the <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird">source code on github</a>
+          <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird">source code</a> |
+          <a target="_blank_" href="https://github.com/wfwalker/ebird-mybird/issues">bug reports</a>
         </p>
       </footer>
     </div>
