--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
             <a data-hash="taxons" href="#taxons">species</a>
             <a data-hash="home" href="#home">home</a>
             <a data-hash="chrono" href="#chrono">chrono</a>
+            <a data-hash="stats" href="#stats">stats</a>
             <a data-hash="debug" href="#debug">debug</a>
             <input id="searchtext" type="text" size="20" />
             <button id="gosearch">search</button>
@@ -42,6 +43,11 @@
 
       <section id="home" class="hidden card inner">
         <div id='home-results' class='inner'>
+        </div>
+      </section>
+
+      <section id="stats" class="hidden card inner">
+        <div id='stats-results' class='inner'>
         </div>
       </section>
 
