remove unused styles, fix typography and colors

--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,12 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <div>
+            <a data-hash="home" href="#home">BirdWalker</a>
             <a data-hash="photos" href="#photos">photos</a>
             <a data-hash="trips" href="#trips">trips</a>
             <a data-hash="bigdays" href="#bigdays">big days</a>
             <a data-hash="locations" href="#locations">locations</a>
             <a data-hash="taxons" href="#taxons">species</a>
-            <a data-hash="home" href="#home">home</a>
             <a data-hash="chrono" href="#chrono">chrono</a>
             <input id="searchtext" type="text" size="20" />
             <button id="gosearch">search</button>
