add really lame loading message

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
             <a data-hash="chrono" href="#chrono">chrono</a>
             <input id="searchtext" type="text" size="20" />
             <button id="gosearch">search</button>
+            <span id='loading' class='hidden'>LOADING</span>
         </div>
         </header>
     </div>
