pad the menubar items

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <div>
+          <div class='menubar'>
             <a data-hash="home" href="#home">BirdWalker</a>
             <a data-hash="photos" href="#photos">photos</a>
             <a data-hash="trips" href="#trips">trips</a>
