new font, other visual tweaks

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <link rel="manifest" href="./w3c-manifest.json">
     <link rel="shortcut icon" href="./images/ebird-favicon.ico">
 
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" type="text/css" media="screen" href="styles/bundle.css">
     <script src="scripts/offline-manager.js"></script>
   </head>
