--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
     <link rel="shortcut icon" href="./images/ebird-favicon.ico">
 
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    
     <link rel="stylesheet" type="text/css" media="screen" href="styles/bundle.css">
     <script src="scripts/offline-manager.js"></script>
   </head>
