make loading appear in fixed position

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
   </head>
 
   <body>
+    <div id='loading' class='hidden'>LOADING</div>
+
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
@@ -32,7 +34,6 @@
             <a data-hash="chrono" href="#chrono">chrono</a>
             <input id="searchtext" type="text" size="20" />
             <button id="gosearch">search</button>
-            <span id='loading' class='hidden'>LOADING</span>
         </div>
         </header>
     </div>
