make photos page into thumbnails for each family link to family page that shows photos

--- a/app/index.html
+++ b/app/index.html
@@ -125,6 +125,11 @@
         </div>
       </section>
 
+      <section id="family" class="hidden card inner">
+        <div id='family-results' class='inner'>
+        </div>
+      </section>
+
       <section id="chrono" class="hidden card inner">
         <div id='chrono-results' class='inner'>
         </div>
