--- a/app/index.html
+++ b/app/index.html
@@ -39,17 +39,24 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <div class='menubar'>
-            <a data-hash="home" href="#home">BirdWalker</a>
-            <a data-hash="photos" href="#photos">photos</a>
-            <a data-hash="trips" href="#trips">trips</a>
-            <a data-hash="bigdays" href="#bigdays">big days</a>
-            <a data-hash="locations" href="#locations">locations</a>
-            <a data-hash="taxons" href="#taxons">species</a>
-            <a data-hash="chrono" href="#chrono">chrono</a>
-            <input id="searchtext" type="text" size="20" />
-            <button id="gosearch">search</button>
-        </div>
+
+          <ul class='topnav' id='myTopnav'>
+            <li><a data-hash="home" href="#home">BirdWalker</a></li>
+            <li><a data-hash="photos" href="#photos">Photos</a></li>
+            <li><a data-hash="trips" href="#trips">Trips</a></li>
+            <li><a data-hash="bigdays" href="#bigdays">Big Days</a></li>
+            <li><a data-hash="locations" href="#locations">Locations</a></li>
+            <li><a data-hash="taxons" href="#taxons">Species</a></li>
+            <li><a data-hash="chrono" href="#chrono">Chrono</a></li>
+            <li>
+              <input id="searchtext" type="text" size="20" />
+              <button id="gosearch">search</button>
+            </li>
+            <li class="icon">
+              <a href="javascript:void(0);" style="font-size: 15px;" id='menutoggler'>☰</a>
+            </li>
+          </ul>
+
         </header>
     </div>
 
