fix search appearance move species list upwards in family page

--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
             <li><a data-hash="chrono" href="#chrono">Chrono</a></li>
             <li>
               <input id="searchtext" type="text" size="15" />
-              <button id="gosearch">search</button>
+              <button id="gosearch">Search</button>
             </li>
             <li class="icon">
               <a href="javascript:void(0);" style="font-size: 15px;" id='menutoggler'>☰</a>
