add a place report for States/Provinces, to complete the place hierarchy

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,11 @@
         </div>
       </section>
 
+      <section id="state" class="hidden card inner">
+        <div id='state-results' class='inner'>
+        </div>
+      </section>
+
       <section id="bigdays" class="hidden card inner">
         <div id='bigdays-results' class='inner'>
         </div>
