experiment with bootstrap photo gallery

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <link rel="shortcut icon" href="./images/ebird-favicon.ico">
     
     <link rel="stylesheet" type="text/css" media="screen" href="styles/bundle.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/jquery.bsPhotoGallery.css">
     <script src="scripts/offline-manager.js"></script>
   </head>
 
