fix year list to use new partial for species list first kludgy google map

--- a/app/index.html
+++ b/app/index.html
@@ -169,5 +169,7 @@
     </div>
 
     <script src="scripts/compressed.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4y5UuNoZMXzc3NXzCgYn8usH1gLFA3b4"></script>
+
   </body>
 </html>
