--- a/app/index.html
+++ b/app/index.html
@@ -47,11 +47,16 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a data-hash="photos" href="#photos">Photos</a></li>
-            <li><a data-hash="trips" href="#trips">Trips</a></li>
-            <li><a data-hash="bigdays" href="#bigdays">Big Days</a></li>
             <li><a data-hash="locations" href="#locations">Locations</a></li>
-            <li><a data-hash="taxons" href="#taxons">Species</a></li>
-            <li><a data-hash="chrono" href="#chrono">Chrono</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Birding <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="#bigdays">Big Days</a></li>
+                <li><a href="#trips">Trips</a></li>
+                <li><a href="#chrono">Chronological Life List</a></li>
+                <li><a href="#taxons">Taxonomic Life List</a></li>
+              </ul>
+            </li>
           </ul>
 
           <form class="navbar-form navbar-left" role="search">
@@ -167,6 +172,9 @@
         </div>
       </section>
     </div>
+
+    <footer>
+    </footer>
 
     <script src="scripts/compressed.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4y5UuNoZMXzc3NXzCgYn8usH1gLFA3b4"></script>
