--- a/app/index.html
+++ b/app/index.html
@@ -42,16 +42,16 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">BirdWalker</a>
+          <a class="navbar-brand" href="#photos">BirdWalker</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a data-hash="photos" href="#photos">Photos</a></li>
-            <li><a data-hash="locations" href="#locations">Locations</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Birding <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#bigdays">Big Days</a></li>
+                <li><a data-hash="locations" href="#locations">Locations</a></li>
                 <li><a href="#trips">Trips</a></li>
                 <li><a href="#chrono">Chronological Life List</a></li>
                 <li><a href="#taxons">Taxonomic Life List</a></li>
