--- a/app/index.html
+++ b/app/index.html
@@ -46,7 +46,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a data-hash="photos" href="#photos">Photos</a></li>
+            <li><a data-hash="photos" href="#photos">Photos by Bill Walker</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Birding <span class="caret"></span></a>
               <ul class="dropdown-menu">
